# BarCrawlBayes

./: README.md  bayesian_anova.py  dataprep.py  eval.py  pyproject.toml  trainbayes.py  trainbayes_repair.py  trainreg.py
configs/: res18_sweep.yaml  res34_sweep.yaml  res98_sweep.yaml
configs/model_configs/: res18best.yaml  res34best.yaml
models/: resnet1d.py
posterior_preds/: BNNResNet18_pred.npy  BNNResNet34_pred.npy  test_gt.npy
utils/: data_utils.py
