[tool.poetry]
name = "barcrawlbayes"
version = "0.1.0"
description = ""
authors = ["ea-g <58582043+ea-g@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
torch = "1.12.0"
torchvision = "~0.13.0"
scipy = "~1.8.1"
matplotlib = "^3.6.2"
pandas = "^1.5.1"
swifter = "^1.3.4"
seaborn = "^0.12.1"
xarray = "^2022.11.0"
tyxe = { git = "https://github.com/TyXe-BDL/TyXe.git"}
scikit-learn = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

